--- a/index.html
+++ b/index.html
@@ -1,71 +1,22 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina luiggy</title>
-    <style>
-        
-        tr>th{
-            color: rgb(44, 21, 247);
-        }
-        tr>td{
-            text-align: center;
-            color: rgb(245, 13, 13);
-        } 
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="js/js.js">
+    <title> pagina de comidas</title>
 </head>
-<body> 
-    <table border="2" style="border-color: rgb(245, 235, 91); border-radius: 2%;">
-        <thead>
-            <caption>TABLA DE POCICIONES</caption>
-            <tr>
-                <th>Equipo</th>
-                <th>Partidos</th>
-                <th>Puntos</th>
-                <th>Escudo</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Colombia</td>
-                <td>5</td>
-                <td>15</td>
-                <td>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="Escudo seleccion colombia" height="80px" width="80px"> 
-                </td>
-            </tr>
-            <tr>
-                <td>Brasil</td>
-                <td>4</td>
-                <td>12</td>
-                <td>
-                    <img src="img/escudo brasil.png" alt="escudo brasil" height="80px" width="80px">
-                </td>
-            </tr>
-            <tr>
-                <td>Argentia</td>
-                <td>3</td>
-                <td>9</td>
-                <td>
-                    <img src="img/escudo argentina.png" alt="escudo argentina" width="80px" height="80px">
-                </td>
-            </tr>
-            <tr>
-                <td>Venezuela</td>
-                <td>2</td>
-                <td>6</td>
-                <td>
-                    <img src="https://as00.epimg.net/img/comunes/fotos/fichas/equipos/large/2930.png" alt="escudo Venezuela" width="80px" height="80px">
-                </td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="4">Eleminatoria al mundial</td>
-            </tr>
-        </tfoot>
-    </table>
+<h1>Venta de Computadores</h1>
+<a href="html/agrupacion.html">Agrupacion</a>
+<br>
+<a href="html/formularios.html">Formulario</a>
+<br>
+<a href="html/multimedia.html">Multimedia</a>
+<br>
+<a href="html/tablas.html">Tablas</a>
+<br>
+<a href="html/texto.html">Texto</a>
 </body>
 </html>
